# json_to_iceberg_antigravity_opus

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
fixtures/: sample_api_response.json
src/json_to_iceberg/: __init__.py  __main__.py  cli.py  config.py  flatten.py  schema.py  writer.py
tests/: test_flatten.py  test_schema.py
