[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-to-iceberg"
version = "0.1.0"
description = "Load nested JSON from SaaS APIs into Apache Iceberg tables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "pyarrow>=14.0",
    "pyiceberg[s3fs]>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
json-to-iceberg = "json_to_iceberg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/json_to_iceberg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
